@@ -1,3 +1,8 @@
+2004-12-09	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/Terminal.spec.in: Added BuildRoot and fixed URL to make
+	  this work correctly.
+
 2004-12-08	Benedikt Meurer <benny@xfce.org>
 
 	* terminal/terminal-app.c(terminal_app_find_screen): Fix to open
